--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="intro-text">
                         <span class="name">CHRISTIAN BLAIR MISA VENTUROZO</span>
                         <hr class="star-light">
-                        <span class="skills"> Graphic Artist - Chess Player</span>
+                        <span class="skills"> Chess Player</span>
                     </div>
                 </div>
             </div>
